--- a/labs/final/src/components/preview.module.css
+++ b/labs/final/src/components/preview.module.css
@@ -1,3 +1,17 @@
-.preview {
+.preview a {
+  color: inherit;
+}
 
+.preview h2, .preview h3 {
+  margin: 0;
+}
+
+.preview h3 {
+  font-size: 1rem;
+  margin: 0.25rem 0;
+}
+
+.preview p {
+  padding: 0.5rem 0;
+  line-height: 1.7;
 }
